# MyBot

./: README.md  bot.py  main.py  pyproject.toml
discord_bot/: bot.py
utils/: __init__.py  llm.py
wecom_bot/: WXBizJsonMsgCrypt.py  demo_server.py
